<resources>
    <string name="app_name">EvaluacionT3-RubiksTimeFirebase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Nombre Fragments -->
    <string name="fragment_home">Home</string>
    <string name="fragment_altas">Altas</string>
    <string name="fragment_buscar">Buscar</string>
    <string name="fragment_modificar">Modificar</string>
    <string name="fragment_eliminar">Eliminar</string>
    <string name="fragment_activos">Activos</string>
    <string name="fragment_inactivos">Inactivos</string>
    <string name="fragment_creditos">Creditos</string>

    <!-- Altas -->
    <string name="cube_id">ID del Tiempo Registrado</string>
    <string name="helper_cube_id">Aquí debes ingresar el ID</string>
    <string name="cube_description">Descripción del Solve</string>
    <string name="helper_cube_description">Aquí debes ingresar la Descripción del Solve</string>
    <string name="cube_name">Nombre del Cubo</string>
    <string name="helper_cube_name">Aquí debes ingresar el Nombre del Cubo</string>
    <string name="cube_DateDue">Fecha Actual</string>
    <string name="helper_cube_DateDue">Aquí debes ingresar la Fecha Actual</string>
    <string name="cube_time">Tiempo</string>
    <string name="helper_cube_time">Aquí debes ingresar el Tiempo</string>
    <string name="cube_search_id">ID a Buscar</string>
    <string name="helper_cube_search_id">Aquí debes ingresar el ID a Buscar</string>

    <!-- Buttons -->
    <string name="sClear">Limpiar</string>
    <string name="sAdd">Agregar</string>
    <string name="sModify">Modificar</string>
    <string name="sCancel">Cancelar</string>
    <string name="sEdit">Editar</string>
    <string name="sDelete">Eliminar</string>
    <string name="sActivar">Activar</string>

    <!-- creditos -->
    <string name="img">Imagen</string>
    <string name="txtTecnologico">Instituto Tecnologico de Toluca</string>
    <string name="version">Version 1.0</string>
    <string name="materia">Dispositivos Moviles</string>
    <string name="desarrollado">Desarrollado por:</string>
    <string name="alumno">Dominguez Merino Joel</string>
    <string name="profesora">M.C Rocio Elizabeth Pulido Alba</string>
    <string name="app">Evaluación T3</string>
    <string name="anio">Mayo - 2021</string>
</resources>