<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.altas.AltasFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/inder"
                android:id="@+id/text_altas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragment_altas"
                android:textColor="@color/cLila"
                android:textSize="36dp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/fa_imagen"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:contentDescription="@string/img"
                android:src="@drawable/icamera" />
            <ImageView
                android:id="@+id/fa_imagen2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:contentDescription="@string/img"
                android:src="@drawable/ifhome" />

            <!-- ID -->

            <com.google.android.material.textfield.TextInputLayout
                android:fontFamily="@font/inder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cube_id"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_cube_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fa_id"
                    android:inputType="number"
                    android:fontFamily="@font/inder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Nombre del Cubo -->
            <com.google.android.material.textfield.TextInputLayout
                android:fontFamily="@font/inder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cube_name"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_cube_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fa_nombre"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/inder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Descripción del Solve -->
            <com.google.android.material.textfield.TextInputLayout
                android:fontFamily="@font/inder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cube_description"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_cube_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fa_description"
                    android:inputType="text"
                    android:fontFamily="@font/inder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <!-- Fecha Actual -->
                <com.google.android.material.textfield.TextInputLayout
                    android:fontFamily="@font/inder"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/cube_DateDue"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:counterEnabled="true"
                    app:endIconMode="clear_text"
                    app:helperText="@string/helper_cube_DateDue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fa_fecha"
                        android:inputType="date"
                        android:fontFamily="@font/inder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>



                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/fa_calendario"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icalendar" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:fontFamily="@font/inder"
                android:id="@+id/fa_cubos_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:fontFamily="@font/inder"
                android:id="@+id/fa_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white" />

            <!-- Tiempo -->
            <com.google.android.material.textfield.TextInputLayout
                android:fontFamily="@font/inder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/cube_time"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_cube_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fa_time"
                    android:inputType="numberDecimal"
                    android:fontFamily="@font/inder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <com.google.android.material.button.MaterialButton
                    android:fontFamily="@font/inder"
                    android:id="@+id/fa_btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="15dp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cVerde"
                    android:text="@string/sAdd"/>

                <com.google.android.material.button.MaterialButton
                    android:fontFamily="@font/inder"
                    android:id="@+id/fa_btnClear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cRojo"
                    android:text="@string/sClear"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>